# rust-ffi-experiments

./: Cargo.toml  README.md
basic-callbacks/: Cargo.toml  Makefile  README.md
basic-callbacks/src/: basic.c  main.rs
build-scripts/: Cargo.toml  README.md
build-scripts/src/: main.rs
call-c-from-rust/: Cargo.toml  README.md
call-c-from-rust/src/: main.rs
call-rust-from-c/: Cargo.toml  Makefile  README.md  build.rs
call-rust-from-c/src/: main.c
magic/: Cargo.toml  README.md
magic-sys/: Cargo.toml  README.md  build.rs
magic-sys/src/: lib.rs
magic/src/: lib.rs
opaque-pointers-in-c/: Cargo.toml  Makefile  README.md
opaque-pointers-in-c/src/: main.c  my_vec.h  my_vec.rs
passing-arrays/: Cargo.toml  README.md
passing-arrays/src/: main.rs
puts/: Cargo.toml  README.md
send-array-to-c/: Cargo.toml  Makefile  README.md  build.rs
send-array-to-c/src/: array_utils.c  main.rs
send-array-to-rust/: Makefile  README.md
send-array-to-rust/src/: main.c
send-pod-to-rust/: Makefile  README.md
send-pod-to-rust/src/: main.c
stateful-callbacks/: Cargo.toml  Makefile  README.md
stateful-callbacks/src/: main.c  stateful.rs
